force-app/main/default/objects/ProfileExplorerDmo__mdt/ProfileExplorerDmo__mdt.object-meta.xml
<CustomObject>
    <label>Profile Explorer DMO</label>
    <pluralLabel>Profile Explorer DMOs</pluralLabel>
    <description>Profile-category Data Cloud DMOs offered in the custom Profile Explorer. Data Cloud objects are queryable but absent from the Apex describe catalogue, so they cannot be enumerated at runtime and are registered here instead.</description>
</CustomObject>