force-app/main/default/objects/ProfileExplorerDmo__mdt/fields/DataSpaceApiName__c.field-meta.xml
<CustomField>
    <fullName>DataSpaceApiName__c</fullName>
    <label>Data Space API Name</label>
    <description>Data space this DMO belongs to, matching DataSpace.DataSpaceApiName.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>