force-app/main/default/objects/ProfileExplorerDmo__mdt/fields/DmoApiName__c.field-meta.xml
<CustomField>
    <fullName>DmoApiName__c</fullName>
    <label>DMO API Name</label>
    <description>API name of the unified profile DMO, for example UnifiedIndividual__dlm.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>