force-app/main/default/objects/ProfileExplorerDmo__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <description>Uncheck to hide this DMO from the picker without deleting the record.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>