force-app/main/default/objects/ProfileExplorerDmo__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <description>Controls the order DMOs appear in the picker.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>